新建目录结构&&增加代码结构文档和UI交互流程文档

--- a/doc/代码结构文档.md
+++ b/doc/代码结构文档.md
@@ -9,11 +9,14 @@
 ### DataFragment 数据单元
     协议的基本组成部分是数据单元
 
-### CommunicationMedia  通讯媒介
+### Media  通讯媒介
     和通信硬件相关，例如串口、网络、glink
 
 ### Transaction  事务
     一组预先定义好的动作
+    支持设备轮抄
+    支持设备升级
+    支持设备重发
 
 ### Device 设备
     设备是一组协议、事务、通信媒介的集合
@@ -27,4 +30,6 @@
 
 ## 代码整体结构
     代码中主要使用三种设计模式： 观察者模式、过滤链模式 和 MVC
+
+
 
